services/ramen-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ramen-ui
  namespace: vnv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ramen-ui
  template:
    metadata:
      labels:
        app: ramen-ui
    spec:
      containers:
        - name: ramen-ui
          image: ghcr.io/therealdavidbour/ramen-ui:10338a8d33d9da787656e9cd161b9aeec01e24b0
          ports:
            - containerPort: 80
