services/ramen-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ramen-ui
  namespace: vnv
spec:
  selector:
    app: ramen-ui
  ports:
    - port: 80
      targetPort: 80
