services/ramen-ui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ramen-ui
  namespace: vnv
  annotations:
    cert-manager.io/cluster-issuer: "k3d-ca-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ramen-ui.10-0-0-200.nip.io
      secretName: ramen-ui-tls
  rules:
    - host: ramen-ui.10-0-0-200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ramen-ui
                port:
                  number: 80
